bk_ida/gccida/c2/compute_record_mode
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/compute_record_mode/src/stor-layout.c:1667:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v3; // ebp 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/compute_record_mode/src/stor-layout.c:1669:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v5; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/compute_record_mode/src/stor-layout.c:1670:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *rttree; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/compute_record_mode/src/stor-layout.c:1686:13: error: invalid operands to binary expression ('struct rtx_def' and 'int')
if ( rtl[1] == 37 ) 
     ~~~~~~ ^  ~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/compute_record_mode/src/stor-layout.c:1688:23: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v4.rtwint = ( __int64)rtl->fld[0]; 
                      ^~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/compute_record_mode/src/stor-layout.c:1710:8: error: use of undeclared identifier 'machine_mode'
v3 = ( machine_mode)rtl[3]; 
       ^
6 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/compute_record_mode/src/obj/stor-layout.o] Error 1
